--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
             width: 342px;
             flex-wrap: wrap;
             height: 342px;
+			background-color:rgba(0,0,0,0);
         }
         .grid-item{
             width: 100px;
@@ -13,6 +14,6 @@
             align-items: center;
             justify-content: center;
             border-radius: 24px;
-			background-color:rgb(0,0,0,0);
+			background-color:rgba(0,0,0,0);
             
         }
