--- a/styles.css
+++ b/styles.css
@@ -5,15 +5,14 @@
             height: 342px;
 			background-color:rgba(0,0,0,0);
         }
-        .grid-item{
-            width: 100px;
-            height: 100px;
-            border:2px solid rgb(77, 2, 109) ;
-            margin: 5px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            border-radius: 24px;
-			background-color:rgba(0,0,0,0);
-            
-        }
+        .grid-item {
+    width: 100px;
+    height: 100px;
+    border: 2px solid rgb(77, 2, 109);
+    margin: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 24px;
+    background-color: rgba(0, 0, 0, 0); 
+		}
