--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 24px;			
+    border-radius: 24px;
+			background-color:rgb(255, 0, 0)
 		}
-#change_button {
-	background-color:rgb(255,0,0);
-}
