--- a/styles.css
+++ b/styles.css
@@ -13,5 +13,8 @@
     align-items: center;
     justify-content: center;
     border-radius: 24px;
-			background-color:rgb(255, 0, 0)
+			background-color:rgba(0, 0, 0, 0)
 		}
+.grid-item.active {
+  background-color: rgb(255, 0, 0);
+}
