--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
             flex-wrap: wrap;
             height: 342px;
         }
-        .grid-item {
+.grid-item {
     width: 100px;
     height: 100px;
     border: 2px solid rgb(77, 2, 109);
@@ -13,7 +13,7 @@
     align-items: center;
     justify-content: center;
     border-radius: 24px;
-			background-color:rgba(0, 0, 0, 0)
+			background-color:rgb(255,0,0)
 		}
 .grid-item.active {
   background-color: rgb(255, 0, 0);
