--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,10 @@
-.grid-container{
-            display: flex;
-            width: 342px;
-            flex-wrap: wrap;
-            height: 342px;
-        }
+.grid-container {
+    display: flex;
+    width: 342px;
+    flex-wrap: wrap;
+    height: 342px;
+}
+
 .grid-item {
     width: 100px;
     height: 100px;
@@ -13,8 +14,10 @@
     align-items: center;
     justify-content: center;
     border-radius: 24px;
-			background-color:rgb(255,0,0)
-		}
+    background-color: rgba(0, 0, 0, 0); /* Transparent background initially */
+}
+
+/* Apply red color when active */
 .grid-item.active {
-  background-color: rgb(255, 0, 0);
+    background-color: rgb(255, 0, 0);  /* Red background when active */
 }
