--- a/styles.css
+++ b/styles.css
@@ -14,5 +14,6 @@
             align-items: center;
             justify-content: center;
             border-radius: 24px;
+			background-color:rgb(255,0,0);
 		}
 
